--- a/force-app/main/default/pages/AH_CostControlUpdate.page
+++ b/force-app/main/default/pages/AH_CostControlUpdate.page
@@ -1,6 +1,9 @@
 <apex:page standardController="User" extensions="AH_CostControlUpdate_Ext" sidebar="false" tabStyle="User" > 
     <apex:form title="Please select Updated user checkbox to save financial data">
-        <apex:pageBlock id="pgBlock">  
+        <apex:pageBlock id="pgBlock">
+            <apex:inputText value="{!searchKey}" label="Input"/>
+        	<apex:commandButton value="Search records" action="{!search}"/>
+            <apex:commandButton value="Clear records" action="{!clear}"/>
             <apex:pageMessages />
             
             <apex:pageBlockTable value="{!usrLst}" var="usrWrap" id="pgTable" title="All Users">
@@ -15,20 +18,18 @@
                 <apex:column value="{!usrWrap.usr.Department}"/>  
                 <apex:column value="{!usrWrap.usr.Title}"/>  
                 <apex:column value="{!usrWrap.usr.Manager.Name}" headerValue="Manager"/>  
-                <apex:column headerValue="FFA Company">
-                    <apex:inputField value="{!usrWrap.usr.FFA_Company__c}"/>
+                <apex:column headerValue="Workday Id">
+                    <apex:inputField value="{!usrWrap.usr.Workday_Id__c}" rendered="{!$Permission.User_Cost_Center_Link}"/>
+                    <apex:outputField value="{!usrWrap.usr.Workday_Id__c}" rendered="{!!$Permission.User_Cost_Center_Link}"/>
                 </apex:column>
-                <apex:column headerValue="FFA Dim 2">
-                    <apex:inputField value="{!usrWrap.usr.FFA_Dimension_2__c}"/>
+                <apex:column headerValue="SAP #">
+                    <apex:inputField value="{!usrWrap.usr.SAP__c}" rendered="{!$Permission.User_Cost_Center_Link}"/>
+                    <apex:outputField value="{!usrWrap.usr.SAP__c}" rendered="{!!$Permission.User_Cost_Center_Link}"/>
                 </apex:column>
-                <apex:column headerValue="FFA Dim 3">
-                    <apex:inputField value="{!usrWrap.usr.FFA_Dimension_3__c}"/>
+                <apex:column headerValue="Cost Ctr">
+                    <apex:inputField value="{!usrWrap.usr.Cost_Ctr__c}" rendered="{!$Permission.User_Cost_Center_Link}"/>
+                    <apex:outputField value="{!usrWrap.usr.Cost_Ctr__c}" rendered="{!!$Permission.User_Cost_Center_Link}"/>
                 </apex:column>
-                <apex:column value="{!usrWrap.usr.Cost_Ctr__c}"/>              
-                <apex:column headerValue="Controlling Verified">
-                    <apex:inputField value="{!usrWrap.usr.Controlling_Verified__c}"/>
-                </apex:column>
-                
             </apex:pageBlockTable>    
             
             <apex:pageBlockButtons >
