--- a/force-app/main/default/pages/AH_BusinessSystemsAnnouncementLoginFlow.page
+++ b/force-app/main/default/pages/AH_BusinessSystemsAnnouncementLoginFlow.page
@@ -9,7 +9,7 @@
             <br/>
             <br/>
             <Center>
-                <apex:outputLabel value="Business Systems Announcement" style="font-family:AmadeusRegular; font-size:20pt; color:#005eb8;"  />
+                <apex:outputLabel value="HOS DTS Announcement" style="font-family:AmadeusRegular; font-size:20pt; color:#005eb8;"  />
                 <br/>
                 <br/>
                 <apex:outputText style="font-style:normal;font-size:110%;" value="{!$Label.AH_Business_Systems_Login_Flow_Message}" />
