VF Pages Update by Anitha

--- a/force-app/main/default/pages/AH_CC_Support.page
+++ b/force-app/main/default/pages/AH_CC_Support.page
@@ -13,7 +13,7 @@
                         <div class="hero-text">
                             <apex:outputText id="lblTitle" style="font-size:30px;color:#FFFFFF;" value="Customer Central" />
                             <br/>
-                            <h3>CUSTOMER EXPERIENCE</h3>
+                            <h3>CUSTOMER SUPPORT</h3>
                         </div>
                     </div>
                 </div>
